--- a/packages/webpack/tsconfig.node.json
+++ b/packages/webpack/tsconfig.node.json
@@ -1,10 +1,25 @@
 {
   "compilerOptions": {
     "module": "ES2020",
-    "moduleResolution": "node"
+    "moduleResolution": "node",
+    "verbatimModuleSyntax": false,
+    "sourceMap": true,
+    "strict": false,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "allowSyntheticDefaultImports": true,
+    "forceConsistentCasingInFileNames": true,
+    "isolatedModules": true,
+    "importsNotUsedAsValues": "remove",
+    "allowImportingTsExtensions": true
   },
   "ts-node": {
     "esm": true,
     "transpiler": "sucrase/ts-node-plugin"
+  },
+  "typeAcquisition": {
+    "include": [
+      "webpack",
+    ]
   }
 }
