--- a/packages/components/Flatlist/package.json
+++ b/packages/components/Flatlist/package.json
@@ -7,7 +7,7 @@
   "module": "index.js",
   "main": "index.js",
   "engines": {
-    "node": ">= 8 || <= 14",
+    "node": ">=14 <=16",
     "npm": ">= 7"
   },
   "publishConfig": {
