--- a/packages/org/package.json
+++ b/packages/org/package.json
@@ -8,7 +8,7 @@
   "author": "Stone Payments - Mamba Team",
   "license": "Apache-2.0",
   "engines": {
-    "node": ">= 8 || <= 14",
+    "node": ">=14 <=16",
     "npm": ">= 7"
   },
   "publishConfig": {
