--- a/packages/webpack/package.json
+++ b/packages/webpack/package.json
@@ -8,7 +8,7 @@
     "access": "public"
   },
   "engines": {
-    "node": ">= 8 || <= 14",
+    "node": ">=14 <=16",
     "npm": ">= 7"
   },
   "dependencies": {
