remove console.log and change updated the line of code to directly instantiate the component in appMeta.runtime.instance

--- a/packages/pos/package.json
+++ b/packages/pos/package.json
@@ -22,7 +22,9 @@
     "npm": ">= 7"
   },
   "dependencies": {
+    "@mamba/core": "workspace:*",
     "@mamba/device": "workspace:*",
+    "@mamba/jade": "workspace:*",
     "immer": "^2.1.5",
     "lodash": "^4.17.21",
     "svelte": "^3",
