--- a/packages/babel/package.json
+++ b/packages/babel/package.json
@@ -36,11 +36,13 @@
     "@mamba/utils": "workspace:*",
     "babel-plugin-dynamic-import-node": "^2.3.3",
     "babel-plugin-istanbul": "^6.1.1",
+    "babel-plugin-lodash": "^3.3.4",
     "babel-plugin-module-resolver": "^5.0.0",
     "babel-plugin-react-remove-properties": "^0.3.0",
     "browserslist": "latest",
     "caniuse-lite": "latest",
     "json5": "^2.2.3",
+    "lodash": "^4",
     "tsconfig": "^7.0.0",
     "tsconfig-paths": "^4.2.0"
   },
