--- a/packages/webpack/package.json
+++ b/packages/webpack/package.json
@@ -30,6 +30,7 @@
     "@mamba/configs": "workspace:*",
     "@mamba/utils": "workspace:*",
     "@types/html-minifier": "^4.0.2",
+    "@types/lodash-webpack-plugin": "^0.11.6",
     "@types/node": ">=20",
     "babel-loader": "^9",
     "colorize-template": "^1.0.0",
@@ -37,6 +38,8 @@
     "eslint-webpack-plugin": "^4.0.1",
     "filemanager-webpack-plugin": "^8.0.0",
     "html-minifier": "^4.0.0",
+    "lodash": "^4",
+    "lodash-webpack-plugin": "^0.11.6",
     "mini-css-extract-plugin": "^2.7.5",
     "mini-html-webpack-plugin": "^3.1.3",
     "picocolors": "^1.0.0",
