--- a/package.json
+++ b/package.json
@@ -33,39 +33,34 @@
     "release": "rm -rf packages/**/package-lock.json && lerna publish",
     "link:name": "./tools/get-links.sh -m name",
     "link:path": "./tools/get-links.sh -m path",
-    "postinstall": "run-s build:shared build:modules",
+    "postinstall": "husky install && run-s build:shared build:modules",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
   },
   "config": {
     "commitizen": {
-      "path": "git-cz"
+      "path": "node_modules/cz-git"
     }
   },
   "lint-staged": {
-    "linters": {
-      "*.{html,svelte}": [
-        "stylelint --fix",
-        "git add"
-      ],
-      "*.js": [
-        "prettier --write",
-        "git add"
-      ],
-      "*.{pcss,css}": [
-        "prettier --write",
-        "stylelint --fix",
-        "git add"
-      ]
-    }
+    "*.{html,svelte}": [
+      "stylelint --fix",
+      "git add"
+    ],
+    "*.js": [
+      "prettier --write",
+      "git add"
+    ],
+    "*.{pcss,css}": [
+      "prettier --write",
+      "stylelint --fix",
+      "git add"
+    ]
   },
   "devDependencies": {
     "@babel/cli": "^7",
     "@babel/core": "^7",
     "@babel/preset-env": "^7",
-    "@commitlint/cli": "^7.6.1",
-    "@commitlint/config-conventional": "^14.1.0",
-    "@commitlint/config-lerna-scopes": "^17.6.3",
     "@storybook/addon-essentials": "^7.0.12",
     "@storybook/addon-interactions": "^7.0.12",
     "@storybook/addon-links": "^7.0.12",
@@ -75,9 +70,10 @@
     "@storybook/testing-library": "^0.0.14-next.2",
     "@types/node": "^20.2.3",
     "babel-loader": "^9.1.2",
-    "commitizen": "^3.1.2",
+    "commitlint": "^17.6.6",
     "cross-env": "^7.0.3",
     "eslint": "^8.40.0",
+    "husky": "^8.0.3",
     "jest": "^29.5.0",
     "json5": "^2.2.3",
     "lerna": "^6.6.2",
