--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "jest": "^29.5.0",
     "json5": "^2.2.3",
     "lerna": "^6.6.2",
+    "lint-staged": "^13.2.3",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.23",
     "prettier": "^2.8.0",
