--- a/package.json
+++ b/package.json
@@ -44,21 +44,17 @@
     }
   },
   "lint-staged": {
-    "linters": {
-      "*.{html,svelte}": [
-        "stylelint --fix",
-        "git add"
-      ],
-      "*.js": [
-        "prettier --write",
-        "git add"
-      ],
-      "*.{pcss,css}": [
-        "prettier --write",
-        "stylelint --fix",
-        "git add"
-      ]
-    }
+    "*.{html,svelte}": [
+      "eslint --fix",
+      "stylelint --fix"
+    ],
+    "*.{js,ts,cjs,mjs}": [
+      "prettier --write",
+      "eslint --fix"
+    ],
+    "*.{pcss,css}": [
+      "stylelint --fix"
+    ]
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
@@ -82,7 +78,7 @@
     "jest-environment-jsdom": "28.1.0",
     "jest-junit": "^13.0.0",
     "lerna": "^4.0.0",
-    "lint-staged": "~8.2.0",
+    "lint-staged": "^14.0.1",
     "npm-run-all": "^4.1.5",
     "postcss": "^7.0.0",
     "prettier": "^2.0.0",
