--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -22,6 +22,8 @@
     "import-global": "^0.1.0",
     "inquirer": "^6.2.2",
     "quickenv": "^0.0.6",
+    "shell-escape-tag": "^2.0.2",
+    "shelljs": "^0.8.5",
     "yargonaut": "^1.1.4",
     "yargs": "^13.1.0"
   },
