--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "stylelint": "^14.0.0",
     "svelte": "<3",
     "ts-jest": "^28.0.0",
+    "ts-node": "^10.9.1",
     "typescript": "^4.7.2"
   },
   "packageManager": "yarn@1.22.19"
