--- a/packages/configs/package.json
+++ b/packages/configs/package.json
@@ -20,8 +20,12 @@
     "@babel/plugin-transform-runtime": "^7.2.0",
     "@babel/preset-env": "~7.12.17",
     "@babel/preset-typescript": "^7.17.12",
+    "@babel/register": "^7.22.15",
     "@babel/runtime": "^7.3.1",
     "@babel/types": "^7.20.0",
+    "@istanbuljs/nyc-config-babel": "^3.0.0",
+    "@istanbuljs/nyc-config-hook-run-in-this-context": "^2.0.0",
+    "@istanbuljs/nyc-config-typescript": "^1.0.2",
     "@tivac/eslint-plugin-svelte": "^1.2.1",
     "@types/babel__core": "^7.1.19",
     "@types/node": "^17.0.38",
@@ -29,6 +33,7 @@
     "@typescript-eslint/parser": "^5.27.0",
     "babel-eslint": "^10.0.1",
     "babel-plugin-dynamic-import-node": "^2.2.0",
+    "babel-plugin-istanbul": "^6.1.1",
     "babel-plugin-lodash": "^3.3.4",
     "babel-preset-airbnb": "^5.0.0",
     "chalk": "^2.4.2",
@@ -43,6 +48,7 @@
     "eslint-plugin-node": "^8.0.1",
     "eslint-plugin-prettier": "^4.0.0",
     "lodash": "^4.17.21",
+    "nyc": "^15.1.0",
     "postcss": "^7.0.0",
     "postcss-advanced-variables": "^3.0.0",
     "postcss-calc": "^7.0.1",
@@ -67,8 +73,8 @@
     "webpack-merge": "^4.2.1"
   },
   "peerDependencies": {
-    "eslint": "^7.0.0",
-    "@playwright/test": "^1.40"
+    "@playwright/test": "^1.40 || ~1.34.3",
+    "eslint": "^7.0.0"
   },
   "gitHead": "e919d0e654f8134f157bf4f6e078685f5dd8a000"
 }
